--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/monokai.css">
-
+		<!--Para agregar los estilos 
+			font-family: 'DM Serif Text', serif;
+			font-family: 'Russo One', sans-serif;
+			font-family: 'Anton', sans-serif;
+		 -->
+		<link href="https://fonts.googleapis.com/css?family=Anton|DM+Serif+Text|Russo+One&display=swap" rel="stylesheet">
+		<style type="text/css">
+			.reveal h1 {
+				font-size: 1.8em;
+				font-family: 'DM Serif Text', serif;
+				text-transform: none;
+   				font-weight: 500;
+			}
+			.reveal a{
+				color: rgba(26, 188, 156,1.0)
+			}
+			.reveal a:visited{
+				color: rgba(26, 188, 156,1.0)
+			}
+			.reveal a:hover{
+				color: rgb(27, 207, 171)
+			}
+		</style>
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -25,14 +47,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://r2---sn-5cjvh-up5s.googlevideo.com/videoplayback?expire=1563250081&ei=QfksXazlIcao1gKWmYOIBA&ip=80.78.64.117&id=o-AKj_sL3Am4Fax9uS6HnH1fvka6CS1o9wG_Mv_LGzqPnO&itag=22&source=youtube&requiressl=yes&mm=31%2C29&mn=sn-5cjvh-up5s%2Csn-c0q7lns7&ms=au%2Crdu&mv=m&mvi=1&pcm2cms=yes&pl=20&initcwndbps=583750&mime=video%2Fmp4&ratebypass=yes&dur=8.173&lmt=1552994306570199&mt=1563228347&fvip=5&c=WEB&txp=5532432&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cmime%2Cratebypass%2Cdur%2Clmt&sig=ALgxI2wwRQIhAOHzm466-tj5VgC0LGkkq8na3m5vaB0w9i5aAANgrT9DAiBxgJ-z-VvlOnjz5R66KFHS5dwimAe1bMbuu3Di8uejsA%3D%3D&lsparams=mm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpcm2cms%2Cpl%2Cinitcwndbps&lsig=AHylml4wRQIgdwx0hbg3fv6E-BZGp5pYOSUAZUymEDB-MkUfwpZrOXwCIQCoE4mDQoj_F1mtHyA2FEd_gvT1t-LjU_gM5ypU_COV_Q%3D%3D&video_id=-MKapbz0GIo&title=4k+background+footage+%28ideal+for+Blockchain+Website%29&_format=.mp4">
-				<div style="padding-top: 1.5em; background-color: rgba(44, 62, 80,0.6)">
-					<h1>Blockchain y Ethereum</h1>
+				<!-- section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://r2---sn-5cjvh-up5s.googlevideo.com/videoplayback?expire=1563250081&ei=QfksXazlIcao1gKWmYOIBA&ip=80.78.64.117&id=o-AKj_sL3Am4Fax9uS6HnH1fvka6CS1o9wG_Mv_LGzqPnO&itag=22&source=youtube&requiressl=yes&mm=31%2C29&mn=sn-5cjvh-up5s%2Csn-c0q7lns7&ms=au%2Crdu&mv=m&mvi=1&pcm2cms=yes&pl=20&initcwndbps=583750&mime=video%2Fmp4&ratebypass=yes&dur=8.173&lmt=1552994306570199&mt=1563228347&fvip=5&c=WEB&txp=5532432&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cmime%2Cratebypass%2Cdur%2Clmt&sig=ALgxI2wwRQIhAOHzm466-tj5VgC0LGkkq8na3m5vaB0w9i5aAANgrT9DAiBxgJ-z-VvlOnjz5R66KFHS5dwimAe1bMbuu3Di8uejsA%3D%3D&lsparams=mm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpcm2cms%2Cpl%2Cinitcwndbps&lsig=AHylml4wRQIgdwx0hbg3fv6E-BZGp5pYOSUAZUymEDB-MkUfwpZrOXwCIQCoE4mDQoj_F1mtHyA2FEd_gvT1t-LjU_gM5ypU_COV_Q%3D%3D&video_id=-MKapbz0GIo&title=4k+background+footage+%28ideal+for+Blockchain+Website%29&_format=.mp4"-->
+				<section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://drive.google.com/a/widaz.com/uc?&id=1l2vMbldVJ8MnQ59Fpa2mjoVirBCzHxQr&export=download">
+				<div style="min-height: 80%; padding: 1em; background-color: rgba(44, 62, 80,0.6)">
+					<h1 style="">Blockchain y Ethereum</h1><br/>
 					<h2><span style="color:#e74c3c">&lt;</span>101<span style="color:#e74c3c">/&gt;</span></h2>
-					
-					<p>
-						<small>Created by <a href="https://chech0x.github.io">Chech0x</a>&nbsp; &amp;</small>  
-						<img style=" 
+					<br/>
+					<div style="text-align:left;padding: 0.1em;margin-left: 1em;width: 100%;background-color: rgba(44, 62, 80,0.05)">
+						<small>Sergio Campos - <a href="https://chech0x.github.io">@Chech0x</a><br/>2019</small><br/>  
+						<!--img style=" 
 							padding: 0.05em;
 							top: -0.8em;
 							position: relative;
@@ -41,11 +64,11 @@
 							width: 1.5em;
 							border-radius: 50px;" 
 							src="https://instagram.faep3-1.fna.fbcdn.net/vp/75c64b9601d50456b9150ac1d1758121/5DB8BD2C/t51.2885-19/s320x320/34327716_1836268116669702_4130109889785626624_n.jpg?_nc_ht=instagram.faep3-1.fna.fbcdn.net" 
-						/>
-					</p>
+						/-->
+					</div>
 				</div>
 				</section>
-				<section>Slide 2</section>
+				<section data-background-video-loop="true" data-background-color="rgba(44, 62, 80,1.0)" >Slide 2</section>
 			</div>
 		</div>
 
