Se agrega codigo qr en la portada

--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@
 					<h1 style="">Blockchain y Ethereum</h1><br/>
 					<h2><span style="color:#e74c3c">&lt;</span>101<span style="color:#e74c3c">/&gt;</span></h2>
 					<br/>
-					<div style="text-align:left;padding: 0.1em;margin-left: 1em;width: 100%;background-color: rgba(44, 62, 80,0.05)">
-						<small>Sergio Campos - <a href="https://chech0x.github.io">@Chech0x</a><br/>2019</small><br/>  
+					<div style="text-align:left;padding: 0.1em;margin-left: 1em;width: 100%;background-color: rgba(44, 62, 80,0.05);display:flex">
+						<div style="width: 50%"><small>Sergio Campos - <a href="https://chech0x.github.io">@Chech0x</a><br/>2019</small><br/>
+						</div>
+						<div style="    width: 50%;
+						display: flex;
+						align-content: center;">
+						<img src="img/qr_img.png" style="    height: 4em;
+						padding: 0em;
+						margin: auto;
+						margin-top: -1.5em;"/>
+					</div>
 						<!--img style=" 
 							padding: 0.05em;
 							top: -0.8em;
