--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<!-- section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://r2---sn-5cjvh-up5s.googlevideo.com/videoplayback?expire=1563250081&ei=QfksXazlIcao1gKWmYOIBA&ip=80.78.64.117&id=o-AKj_sL3Am4Fax9uS6HnH1fvka6CS1o9wG_Mv_LGzqPnO&itag=22&source=youtube&requiressl=yes&mm=31%2C29&mn=sn-5cjvh-up5s%2Csn-c0q7lns7&ms=au%2Crdu&mv=m&mvi=1&pcm2cms=yes&pl=20&initcwndbps=583750&mime=video%2Fmp4&ratebypass=yes&dur=8.173&lmt=1552994306570199&mt=1563228347&fvip=5&c=WEB&txp=5532432&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cmime%2Cratebypass%2Cdur%2Clmt&sig=ALgxI2wwRQIhAOHzm466-tj5VgC0LGkkq8na3m5vaB0w9i5aAANgrT9DAiBxgJ-z-VvlOnjz5R66KFHS5dwimAe1bMbuu3Di8uejsA%3D%3D&lsparams=mm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpcm2cms%2Cpl%2Cinitcwndbps&lsig=AHylml4wRQIgdwx0hbg3fv6E-BZGp5pYOSUAZUymEDB-MkUfwpZrOXwCIQCoE4mDQoj_F1mtHyA2FEd_gvT1t-LjU_gM5ypU_COV_Q%3D%3D&video_id=-MKapbz0GIo&title=4k+background+footage+%28ideal+for+Blockchain+Website%29&_format=.mp4"-->
-				<section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://drive.google.com/a/widaz.com/uc?&id=1l2vMbldVJ8MnQ59Fpa2mjoVirBCzHxQr&export=download">
+				<section data-background-video-loop="true" data-background-video="https://drive.google.com/uc?id=1utPVznqVm0HZSfQ1gP_2gAe2laKF_8QS&export=download&__format=.mp4">
 				<div style="min-height: 80%; padding: 1em; background-color: rgba(44, 62, 80,0.6)">
-					<h1 style="">Blockchain y Ethereum</h1><br/>
+					<h1 >Blockchain y Ethereum</h1><br/>
 					<h2><span style="color:#e74c3c">&lt;</span>101<span style="color:#e74c3c">/&gt;</span></h2>
 					<br/>
 					<div style="text-align:left;padding: 0.1em;margin-left: 1em;width: 100%;background-color: rgba(44, 62, 80,0.05);display:flex">
@@ -59,10 +59,13 @@
 						<div style="    width: 50%;
 						display: flex;
 						align-content: center;">
-						<img src="img/qr_img.png" style="    height: 4em;
+						<img src="img/qr_img.png" width="400px" height="400px" style="
+						max-height: 4em;
+						max-width: 4em;
 						padding: 0em;
 						margin: auto;
-						margin-top: -1.5em;"/>
+						margin-top: -1.5em;
+						border: none;"/>
 					</div>
 						<!--img style=" 
 							padding: 0.05em;
