--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							
 							<ul>
 								<li>Generales Bizantinos</li>
-								<li>Que es la Blockchain</li>
+								<li>¿Què es Blockchain?</li>
 								<small>
 									<ul>
 										<li>Consenso</li>
@@ -164,9 +164,32 @@
 					</ul -->
 				</section>
 				<section>
-					<section><h2>Generales Bizantinos</h2></section>
+					<section data-background-video="https://drive.google.com/uc?id=1X8L2txveZtjlRZOqPq1EIsiRt4917i7L&export=download" data-background-video-muted="true" data-background-video-loop="true">
+						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
+							<h2>Generales Bizantinos</h2>
+						</div>
+					</section>
 
-					<section><h2>Que es la Blockchain</h2></section>
+					<section data-background-image="img/chain.gif">
+						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
+							<h2>¿Qué es Blockchain?</h2>
+						</div>
+					</section>
+					<section data-background-image="img/asking.gif">
+						<h2 style="position: relative;left: -2em;padding-left:1em;top:-1em;background-color: rgba(30, 34, 36,0.4);text-align:left">¿Qué resuelve?</h2>
+						<div style="position: relative;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.6); color: white">
+							
+							<ul>
+								<li>Principalmente el problema de la confianza</li>
+								<li>Reduce Fricciones en los Procesos</li>
+								<ul>
+									<li>Al eliminar a los intermediarios</li>
+								</ul>
+								<li>Doble gasto</li>
+								<li>Censura y Comportamientos Arbitrarios</li>
+							</ul>
+						</div>
+					</section>
 					<section data-background-image="img/buzz_everywhere.gif">
 						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
 							<h2>Hashes Everywhere</h2>
@@ -177,21 +200,28 @@
 				</section>
 				<section>
 					<section><h2>Cryptoconomics</h2></section>
-					<section>
-						<h2>CryptoAssets</h2>
-						<ul>
-							<li>Crytptocurrencies (Cryptomonedas)</li>
-							<li>Tokens</li>
-							<li>ICO,IEO,Hayy de todo</li>
-						</ul>
+					<section data-background-image="img/piggybank.gif">
+						<div style="position: relative;top: 5em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
+								<h2>CryptoAssets</h2>
+								<ul>
+									<li>Crytptocurrencies (Cryptomonedas)</li>
+									<li>Tokens</li>
+									<li>ICO,IEO,Hayy de todo</li>
+								</ul>
+						</div>
 					</section>
+
 				</section>
 				<section>
 					<section><h2>Wallets</h2></section>
 					<section><iframe width="560" height="315" src="https://www.youtube.com/embed/oEfpaJPO0cM" frameborder="0" data-autoplay allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
 				</section>
 				<section>
-					<section><h2>¿Qué son los Nodos?</h2></section>
+					<section data-background-image="img/leftboximg.gif">
+						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
+							<h2>¿Qué son los Nodos?</h2>
+						</div>
+					</section>
 					<section><h2>Tipos</h2></section>
 				</section>
 				<section>
@@ -211,10 +241,13 @@
 						</div>
 
 					</section>
-					<section >
-						<div style="min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.4); color: white">
-							<h2>Contratos Inteligentes</h2>
-						</div>
+					<section data-background-image="img/smartcontracts.gif" >
+
+								<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
+										<h2>Contratos Inteligentes</h2>
+								</div>
+
+
 
 					</section>
 				</section>
