Update de herramientas

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 			section div{
 				padding: 0.5em;
 			}
+			.reveal section img {
+				background-color: rgba(255, 255, 255, 0);
+				border: none;
+				box-shadow: none;
+
+			}
+			.rounded {
+				border: none;
+				border-radius: 50%;
+			}
 		</style>
 		<!-- Printing and PDF exports -->
 		<script>
@@ -258,7 +268,26 @@
 							</div>
 	
 					</section>
-					<section></section>
+					<section data-background-image="img/coding.gif">
+						<h2   style="position: relative;top: -4.5em;">Solc</h2>
+					</section>
+					<section data-background-color="rgb(51, 37, 42)">
+						<div style="display: inline-flex;margin: auto;">
+						<h2>Truffle Suite</h2><img class="rounded" style="height: 2em;" src="img/truffle.png"/>
+				
+						</div>
+						<br/>
+						<img style="height: 9em;" src="img/truffle-suite.png"/>
+					</section>
+					<section>
+						<h2>Remix</h2>
+					</section>
+					<section>
+						<h2>Infura</h2>
+					</section>
+					<section>
+						<h2>EthScan</h2>
+					</section>
 				</section>
 			</div>
 		</div>
