Se agregan tipos de wallets y favicon

--- a/index.html
+++ b/index.html
@@ -224,12 +224,44 @@
 				</section>
 				<section>
 					<section data-background-color="rgba(231, 76, 60,1.0)"><h2>Wallets</h2><img style="height: 10em;background-color: rgba(231, 76, 60,1.0)" src="img/ledger.png"/></section>
-					<section data-background-image="img/signing.gif">
-						<div style="position: relative;bottom:-10em;min-height: 80%; padding: 0.2em; background-color: rgba(30, 34, 36,0.5); color: white">
+					<section data-background-image="img/signing.GIF">
+						
+						<div style="position: relative;bottom:-7em;min-height: 80%; padding: 0.2em; background-color: rgba(30, 34, 36,0.5); color: white">
+						<h3>Permiten</h3>
 						<ul>
 							<li>Firmar mensajes con la clave privada</li>
 							<li>Inyectar mensajes como txs en blockchain</li>
 							<li>Cosultar el estado consolidado de txs asociadas a una clave pública</li>
+						</ul>
+					</div>
+					</section>
+					<section data-background-color="rgba(231, 76, 60,1.0)">
+						<div style="min-height: 80%; padding: 0.2em; background-color: rgba(30, 34, 36,0.5); color: white">
+						<ul>
+							<li>Paperwallets (QR y/o en claro)</li>
+							<li>Mobile Apps</li>
+								<small>
+								<ul>
+									<li>
+										jaxx liberty
+									</li>
+									<li>Blockchain.info</li>
+								</ul>
+							</small>
+							<li>Desktop</li>
+							<small>
+							<ul>
+								<li>Jaxx</li>
+								<li>Exodus.io</li>
+								<li>Ledger Live (Ledger)</li>
+							</ul></small>
+							<li>Web</li>
+							<ul>
+								<li>myetherwallet.com</li>
+								<li>Metamask Extension</li>
+							</ul>
+							<li>Human Wallets</li>
+							<li>Frases Nemot&eacute;cnicas (BIP32/<strong>BIP39</strong>/BIP44)</li>
 						</ul>
 					</div>
 					</section>
