--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<!-- section data-background-video-loop="true" data-background-color="#000000" data-background-video="https://r2---sn-5cjvh-up5s.googlevideo.com/videoplayback?expire=1563250081&ei=QfksXazlIcao1gKWmYOIBA&ip=80.78.64.117&id=o-AKj_sL3Am4Fax9uS6HnH1fvka6CS1o9wG_Mv_LGzqPnO&itag=22&source=youtube&requiressl=yes&mm=31%2C29&mn=sn-5cjvh-up5s%2Csn-c0q7lns7&ms=au%2Crdu&mv=m&mvi=1&pcm2cms=yes&pl=20&initcwndbps=583750&mime=video%2Fmp4&ratebypass=yes&dur=8.173&lmt=1552994306570199&mt=1563228347&fvip=5&c=WEB&txp=5532432&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cmime%2Cratebypass%2Cdur%2Clmt&sig=ALgxI2wwRQIhAOHzm466-tj5VgC0LGkkq8na3m5vaB0w9i5aAANgrT9DAiBxgJ-z-VvlOnjz5R66KFHS5dwimAe1bMbuu3Di8uejsA%3D%3D&lsparams=mm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpcm2cms%2Cpl%2Cinitcwndbps&lsig=AHylml4wRQIgdwx0hbg3fv6E-BZGp5pYOSUAZUymEDB-MkUfwpZrOXwCIQCoE4mDQoj_F1mtHyA2FEd_gvT1t-LjU_gM5ypU_COV_Q%3D%3D&video_id=-MKapbz0GIo&title=4k+background+footage+%28ideal+for+Blockchain+Website%29&_format=.mp4"-->
-				<section data-background-video="https://drive.google.com/uc?id=1JeVPAKz6GXwISxGZ2nsdB5ZdZZxgCwe2&export=download&_format_=.webm,https://drive.google.com/uc?id=1JeVPAKz6GXwISxGZ2nsdB5ZdZZxgCwe2&export=download&_format_=.mp4" data-background-video-loop="true" data-background-video-muted="true">
+				<section data-background-video="https://gateway.ipfs.io/ipfs/QmSj5QCk4N116UTxyPPnaJoSgbaXhaHwscB6zYUF3z2VdJ?_format_=.webm,https://gateway.ipfs.io/ipfs/QmZQGgXrywmyewu8LptCMcP8xqXHDAqYXKHj4qEVrYwenu?format=.mp4" data-background-video-loop="true" data-background-video-muted="true">
 				<div style="min-height: 80%; padding: 1em; background-color: rgba(44, 62, 80,0.6)">
 					<h1 >Blockchain y Ethereum</h1><br/>
 					<h2><span style="color:#e74c3c">&lt;</span>101<span style="color:#e74c3c">/&gt;</span></h2>
@@ -129,7 +128,7 @@
 
 				</section>
 				<section>
-					<section data-background-video="https://drive.google.com/uc?id=1X8L2txveZtjlRZOqPq1EIsiRt4917i7L&export=download" data-background-video-muted="true" data-background-video-loop="true">
+					<section data-background-video="https://gateway.ipfs.io/ipfs/QmNqUUcyG7iVi67UCjETLBYMUMxmrbWgNNAhvNQAdxov5d?format=.mp4" data-background-video-muted="true" data-background-video-loop="true">
 						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
 							<h2>Generales Bizantinos</h2>
 						</div>
@@ -299,7 +298,7 @@
 						</div>
 
 					</section>
-					<section data-background-video="https://drive.google.com/uc?id=1mj7NVev363t7l9DAu5cWMzAZ7R-VBtsY&export=download" data-background-video-muted="true" data-background-video-loop="true" >
+					<section data-background-video="https://gateway.ipfs.io/ipfs/QmZVrAybyJUe6t8oiDNe1CQxDDuWmQQXYou7ky2S3e5wXH?format=.mp4" data-background-video-muted="true" data-background-video-loop="true" >
 						<div style="min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.4); color: white">
 							<ul>
 								<li>Turing Completed</li>
