Rollback a url de videos a google drive

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 				</section>
 				<section>
-					<section data-background-video="https://gateway.ipfs.io/ipfs/QmNqUUcyG7iVi67UCjETLBYMUMxmrbWgNNAhvNQAdxov5d?format=.mp4" data-background-video-muted="true" data-background-video-loop="true">
+					<section data-background-video="https://drive.google.com/uc?id=1X8L2txveZtjlRZOqPq1EIsiRt4917i7L&export=download" data-background-video-muted="true" data-background-video-loop="true">
 						<div style="position: relative;top: 10em;min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.8); color: white">
 							<h2>Generales Bizantinos</h2>
 						</div>
@@ -298,7 +298,7 @@
 						</div>
 
 					</section>
-					<section data-background-video="https://gateway.ipfs.io/ipfs/QmZVrAybyJUe6t8oiDNe1CQxDDuWmQQXYou7ky2S3e5wXH?format=.mp4" data-background-video-muted="true" data-background-video-loop="true" >
+					<section data-background-video="https://drive.google.com/uc?id=1mj7NVev363t7l9DAu5cWMzAZ7R-VBtsY&export=download" data-background-video-muted="true" data-background-video-loop="true" >
 						<div style="min-height: 80%; padding: 1em; background-color: rgba(30, 34, 36,0.4); color: white">
 							<ul>
 								<li>Turing Completed</li>
